tests/a/tests/integrity/fail/if/if.1.stderr
error: expected {bin}{bin}, found {bin}{b,bin}
  --> tests/integrity/fail/if/if.1.rs:13:13
   |
13 |         x = 6;
   |             ^
